# adsdb

./: .flake8  .gitignore  Makefile  README.md  notes-data-analysis-backbone.txt  pyproject.toml
.github/workflows/: clean_pipeline.yml  discover.yml  lint.yml  predict.yml  run_pipeline.yml
datasets/landing-zone/data-discovery/: deaths.csv  gini.csv  population.csv
datasets/landing-zone/persistent/education/: education_1697897185_v14.csv  education_1697897185_v15.csv  education_1697897185_v2.csv  education_1697897185_v25.csv  education_1697897185_v27.csv  education_1697897185_v5.csv  education_1697897185_v6.csv  education_1697901614_v1.csv  education_1697901614_v10.csv  education_1697901614_v19.csv  education_1697901614_v20.csv  education_1697901614_v24.csv  education_1698169244_v13.csv  education_1698169244_v14.csv  education_1698169244_v23.csv  education_1698241735_v16.csv  education_1698241735_v4.csv  (+6 more)
datasets/predict/input/: test.csv
datasets/predict/model/: model.pkl
datasets/predict/output/: test_predictions_1704038082528.csv
datasets/trace/: data-governance.db
datasets/trusted-zone/: trusted.db
scripts/: formatted-zone.py  landing-zone.py
scripts/data-analysis-backbone-1/: prediction.py
scripts/data-discovery/: deaths_population_gini.py
scripts/data_io/: data_io.py
scripts/exploitation-zone/: create_table_statements.py  exploitation-zone.py  helper_functions.py  missings.py
scripts/formatted-zone/: formatted-zone.py
scripts/landing-zone/: landing-zone.py
scripts/trusted-zone/: dataset.py  helper_functions.py  trusted-zone.py
(+5 files in other folders)
